Recreate WebXR render target view on texture resize

The render target view depends on the destination texture, but wasn't
being recreated on texture resize, resulting in broken rendering
after changing framebuffer scale (WebXR) or canvas size (WebVR 1.1)
for the OpenVR backend.

BUG=835905

Cq-Include-Trybots: luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I92bbcdc4f2ed4da1c248cf63132a2bc60a25a8c7
Reviewed-on: https://chromium-review.googlesource.com/1144469
Reviewed-by: Bill Orr <billorr@chromium.org>
Commit-Queue: Klaus Weidner <klausw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#576728}
Former-commit-id: 606c29625e0ce93ba94e5d183942d6fb2865321e