device/vr/windows/d3d11_texture_helper.cc
@@ -214,7 +214,7 @@ void D3D11TextureHelper::AllocateBackBuffer() {
     D3D11_TEXTURE2D_DESC desc_target;
     render_state_.target_texture_->GetDesc(&desc_target);
     // If the target should change size, format, or other properties reallocate
-    // a new target.
+    // a new texture and new render target view.
     if (desc_source.Width != desc_target.Width ||
         desc_source.Height != desc_target.Height ||
         desc_source.MipLevels != desc_target.MipLevels ||
@@ -227,6 +227,7 @@ void D3D11TextureHelper::AllocateBackBuffer() {
         desc_source.CPUAccessFlags != desc_target.CPUAccessFlags ||
         desc_source.MiscFlags != desc_target.MiscFlags) {
       render_state_.target_texture_ = nullptr;
+      render_state_.render_target_view_ = nullptr;
     }
   }
 
